...
                    </view>
                    <navigationItem key="navigationItem" id="7hm-nA-ybv">
                        <barButtonItem key="leftBarButtonItem" style="plain" id="9hA-j6-NRb">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="F2a-eI-QQM">
                                <rect key="frame" x="16" y="5" width="118" height="34.333333333333336"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="resetFilterButton"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Reset Filters"/>
                                <connections>
                                    <action selector="resetFilterButtonTapped:" destination="WYS-LZ-qlM" eventType="touchUpInside" id="dfP-yA-lvx"/>
                                </connections>
                            </button>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" id="Yb3-Ue-hPj">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="p8V-X2-gN8">
                                <rect key="frame" x="257" y="4.6666666666666679" width="120" height="35"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="filterButton"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Filters"/>
                                <connections>
                                    <action selector="filterButtonTapped:" destination="WYS-LZ-qlM" eventType="touchUpInside" id="mtC-gT-ghj"/>
                                </connections>
                            </button>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <pickerView contentMode="scaleToFill" restorationIdentifier="ContinentsPickerView" translatesAutoresizingMaskIntoConstraints="NO" id="yDf-vG-1BI" userLabel="Continent Picker View">
                                                <rect key="frame" x="0.0" y="43.333333333333314" width="393" height="280.66666666666669"/>
                                                <accessibility key="accessibilityConfiguration" identifier="continentPickerView"/>
                                            </pickerView>
                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="83O-N0-DZy" userLabel="filterButtonFilterView">
                                                <rect key="frame" x="0.0" y="323.99999999999994" width="393" height="31.333333333333314"/>
                                                <accessibility key="accessibilityConfiguration" identifier="filterButtonFilterView"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="31.333333333333329" id="VgQ-kQ-t3L"/>
                                                </constraints>
                                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
