...
    @IBOutlet var languagePickerView: UIPickerView!
    @IBOutlet var continentPickerView: UIPickerView!
    
    var selectedContinent: String?
    var selectedLanguage: String?
    
    let continents = ["No Continents","Africa", "Americas", "Asia", "Europe", "Oceania", "Polar", "Antarctic"]
    let languages = ["No Languages", "English", "French", "Spanish", "Chinese", "Arabic", "Russian", "Hindi"]
    
    override func viewDidLoad() {
        languagePickerView.delegate = self
        languagePickerView.dataSource = self
        continentPickerView.delegate = self
        continentPickerView.dataSource = self
...
